--- a/app/views/main.html
+++ b/app/views/main.html
@@ -13,6 +13,6 @@
     </head>
     <body>
         #{doLayout /}
-        <script src="@{Handlebars.templates()}" type="text/javascript"></script>
+        <script src="@{HandlebarsController.templates()}" type="text/javascript"></script>
     </body>
 </html>
