--- a/app/views/js/app/index.html
+++ b/app/views/js/app/index.html
@@ -1,3 +1,3 @@
-Hello {{name}} {{age}} {{name}}
+Hello {{name}} {{age}} {{name}} {{#address}} {{street}} {{houseNumber}} {{/address}}
 
 <a href="/app/second" dl-async>Second</a>
