Optimized template rendering

--- a/app/views/mainjs.html
+++ b/app/views/mainjs.html
@@ -1,6 +1,6 @@
 #{extends 'main.html'/}
 <div id="async-content">
-#{handlebars.renderJs template:template, context: contextJson.getAsJsonObject()/}
+#{handlebars.renderJs template:template, context: contextJson/}
 </div>
 
 <script>
