--- a/app/views/js/app/index.html
+++ b/app/views/js/app/index.html
@@ -1,3 +1,4 @@
 Hello {{name}} {{age}} {{name}} {{#address}} {{street}} {{houseNumber}} {{/address}}
 
-<a href="/app/second" dl-async>Second</a>
+<a href="/app/second/{{age}}" dl-async>Second</a>
+<a href="/app/list" dl-async>List</a>
