--- a/app/views/main.html
+++ b/app/views/main.html
@@ -9,11 +9,14 @@
         <link rel="shortcut icon" type="image/png" href="@{'/public/images/favicon.png'}">
         <script src="@{'/public/javascripts/jquery-2.1.1.js'}" type="text/javascript" charset="${_response_encoding}"></script>
         <script src="@{'/public/javascripts/handlebars-v1.3.0.js'}" type="text/javascript" charset="${_response_encoding}"></script>
+        <script src="@{'/public/javascripts/underscore.js'}" type="text/javascript" charset="${_response_encoding}"></script>
         #{get 'moreScripts' /}
     </head>
     <body>
         #{doLayout /}
+        <script src="@{'/public/javascripts/play-handlebars.js'}" type="text/javascript"></script>
         <script src="@{JsController.templates()}" type="text/javascript"></script>
+        <script src="@{JsController.routes()}" type="text/javascript"></script>
         <script src="@{'/public/javascripts/devli.js'}" type="text/javascript"></script>
     </body>
 </html>
